Layout issue fix

--- a/src/app/pages/projects/projectgrid/projectgrid.component.html
+++ b/src/app/pages/projects/projectgrid/projectgrid.component.html
@@ -2,7 +2,7 @@
   <app-page-title title="Dashboard" [breadcrumbItems]="breadCrumbItems" (storageItemCreated)="onStorageItemCreated()"></app-page-title>
 
   <div class="row">
-    <div class=" col-xl-4 col-sm-6" *ngIf="isRepoCreated === 'yes'" style="cursor: pointer;" (click)="goToFileManager()">
+    <div class=" col-xl-4 col-sm-6" *ngIf="isRepoCreated === 'yes' && pageNo===1" style="cursor: pointer;" (click)="goToFileManager()">
       <div class="card">
         <div class="card-body">
           <div class="d-flex">
