adding changes for the scan results

--- a/src/app/pages/filemanager/filemanager.component.scss
+++ b/src/app/pages/filemanager/filemanager.component.scss
@@ -33,8 +33,8 @@
   }
 
   .avatar {
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -46,4 +46,8 @@
     align-items: center;
     margin-top: 10px;
     padding: 2px;
+  }
+
+  .top-contributor{
+    margin-top: -20px;
   }
