--- a/src/app/pages/filemanager/filemanager.component.html
+++ b/src/app/pages/filemanager/filemanager.component.html
@@ -320,8 +320,8 @@
                                                                             </div>
                                                                             <br>
 
-                                                                            <h5 class="font-size-14 text-truncate" style="font-size: 12px;"><a href="javascript: void(0);" class="text-dark">
-                                                                                Action : {{data['action']}}</a>
+                                                                            <h5 class="font-size-14 text-truncate" style="font-size: 12px;">
+                                                                                <a href="javascript: void(0);" style="font-size: 12px;color: #2200ff;" [innerHTML]="data['action']"></a>
                                                                              </h5>
                                                                              <br>
                                                                             <p> Fix</p>
