adding changes for the scan results

--- a/src/app/pages/dashboards/saas/saas.component.html
+++ b/src/app/pages/dashboards/saas/saas.component.html
@@ -11,9 +11,9 @@
                                 </div>
                                 <div class="flex-grow-1 align-self-center">
                                     <div class="text-muted">
-                                        <p class="mb-2">Welcome to skote dashboard</p>
+                                        <p class="mb-2"></p>
                                         <h5 class="mb-1">Henry wells</h5>
-                                        <p class="mb-0">UI / UX Designer</p>
+                                        <p class="mb-0">Developer</p>
                                     </div>
                                 </div>
                             </div>
