--- a/src/app/pages/dashboards/saas/saas.component.html
+++ b/src/app/pages/dashboards/saas/saas.component.html
@@ -12,7 +12,7 @@
                                 <div class="flex-grow-1 align-self-center">
                                     <div class="text-muted">
                                         <p class="mb-2"></p>
-                                        <h5 class="mb-1">Henry wells</h5>
+                                        <h5 class="mb-1">Amit Mehta</h5>
                                         <p class="mb-0">Developer</p>
                                     </div>
                                 </div>
