--- a/src/app/pages/pen-test/pen-test.component.html
+++ b/src/app/pages/pen-test/pen-test.component.html
@@ -1,1 +1,39 @@
-<p>pen-test works!</p>
+<div class="container-fluid">
+    <app-page-title title="AI Assistance Penetration Testing"></app-page-title>
+  
+    <div class="row">
+      @for(grid of dataToUse;track $index){
+      <div class=" col-xl-4 col-sm-6" style="cursor: pointer;">
+        <div class="card">
+          <div class="card-body">
+            <div class="d-flex">
+              <div class="flex-grow-1 overflow-hidden">
+                <h5 class="text-truncate font-size-15">
+                  <a href="javascript: void(0);" class="text-dark">{{grid.text}}</a>
+                </h5>
+                <p class="text-muted mb-4">{{grid.subtext}}</p>
+              </div>
+            </div>
+          </div>
+          <div class="px-4 py-3 border-top">
+            <ul class="list-inline mb-0">
+              <li class="list-inline-item me-3" title="Test Status" tooltip="Test Status">
+                <span class="badge" [ngClass]="{ 'bg-success': grid.comment <= 10,
+                      'bg-warning': grid.comment > 10 && grid.comment <= 20,
+                      'bg-danger': grid.comment > 20 }">{{grid.status}}</span>
+              </li>
+              <!-- <li class="list-inline-item me-3" title="Test Date" tooltip="Test Date">
+                <i class="bx bx-calendar me-1"></i>
+                {{grid.date}}
+              </li>
+              <li class="list-inline-item me-3" title="Results" tooltip="Failed Cases">
+                <i class="bx bx-shield-quarter me-1"></i>
+                {{grid.comment}}
+              </li> -->
+            </ul>
+          </div>
+        </div>
+      </div>
+      }
+    </div>
+  </div>
