--- a/src/app/shared/ui/pagetitle/pagetitle.component.html
+++ b/src/app/shared/ui/pagetitle/pagetitle.component.html
@@ -1,4 +1,7 @@
 <!-- breadcrumb item -->
+<div class="image-container" *ngIf="isSpinner">
+  <img src="assets/images/usr/spinner2.svg" alt="Centered Image" class="centered-image">
+</div>
 <div class="row">
   <div class="col-12">
     <div class="page-title-box d-sm-flex align-items-center justify-content-between">
