--- a/src/app/pages/pen-test/pen-test.component.html
+++ b/src/app/pages/pen-test/pen-test.component.html
@@ -3,7 +3,7 @@
   
     <div class="row">
       <div class=" col-xl-4 col-sm-6" style="cursor: pointer;" *ngIf="isAppCreated === 'yes'">
-        <div class="card">
+        <div class="card"  (click)="navigate()">
           <div class="card-body">
             <div class="d-flex">
               <div class="flex-shrink-0 me-4">
@@ -37,7 +37,7 @@
       </div>
       @for(grid of dataToUse;track $index){
       <div class=" col-xl-4 col-sm-6" style="cursor: pointer;">
-        <div class="card">
+        <div class="card" (click)="navigate()">
           <div class="card-body">
             <div class="d-flex">
               <div class="flex-shrink-0 me-4">
